--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,7 +14,8 @@ Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 18/01/2022 - Robson Vaamonde - Novas opções de configuração do OpenSSH Server no arquivo: sshd_config ainda em fase 
 de testes e homologação (acréscentado no final do arquivo, opções comentadas), customização do arquivo: config.conf
 do Neofetch, criação do arquivo de CRON: neofetch-cron para atualizar o arquivo motd, atualização das opções no 
-arquivo: 01-openssh.sh.
+arquivo: 01-openssh.sh, atualização do arquivo de configuração: dhcpd.conf com novas opções: get-lease-hostnames on;
+e ping-check on;, 
 
 17/01/2022 - Robson Vaamonde - Atualização dos arquivos: issue.net, 04-ConfiguracaoDoNeplan.sh, correção do Locale no
 arquivo: 05-ntp.sh, acréscimo das linhas: locale-gen pt_BR.UTF-8, localectl set-locale LANG=pt_BR.UTF-8 e correção do
