--- a/NEWS
+++ b/NEWS
@@ -7,11 +7,14 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 26/01/2022
-Versão: 0.11
+Data de atualização: 03/02/2022
+Versão: 0.12
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= CRIAÇÃO DE NOVOS SCRIPTS =============================================
+03/02/2022 - Robson Vaamonde - Estudos para colocar os recursos do Prometheus e do InfluxDB no script do Grafana, 
+verificando a possibilidade de migrar o Guacamole Server para utilizar o Banco de Dados do MySQL, 
+
 15/01/2022 - Robson Vaamonde - Novas soluções de TI para o Curso de Ubuntu Server 20.04.x LTS, criação dos scripts e
 arquivos de configuração (criado: feito e publicado | dev: em desenvolvimento):
 	_ 00-webdav.sh (criado): extensão do protocolo HTTP para transferência de arquivos;
