--- a/NEWS
+++ b/NEWS
@@ -7,11 +7,15 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 14/02/2022
-Versão: 0.14
+Data de atualização: 23/02/2022
+Versão: 0.15
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= CRIAÇÃO DE NOVOS SCRIPTS =============================================
+23/02/2022 - Robson Vaamonde - Estudos e criação do script: 00-passbolt.sh. Passbolt é um gerenciador de senhas de 
+código aberto projetado para colaboração em equipe. Projeto conhecido no LinkedIn no perfil do: Wendel Guaralde
+Mais informações: https://help.passbolt.com/hosting/install/ce/ubuntu/ubuntu
+
 14/02/2022 - Robson Vaamonde - Estudos e criação do script: 00-metabase.sh. Metabase é uma ferramenta de business 
 intelligence gratuita e de código aberto que pode ser usada para pesquisar conjuntos de dados e exibir informações.
 
