--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,16 +13,15 @@ Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
 24/03/2022 - Robson Vaamonde - Atualização do arquivo de configuração: timesyncd.conf com mais servidores do projeto
-NTP.br nas linhas: NTP e FallbackNTP, alteração do script: 05-ntp.sh adicionando as opções de reinicializar o serviço
-do Timesyncd, adicionado a opção: status no comando timedatectl,  adicionado a opção de reinicializar o serviço do
-Timesyncd e Status do Daemon.   
+NTP.br nas linhas: NTP e FallbackNTP, alteração do script: 05-ntp.sh.
 
 23/03/2022 - Robson Vaamonde - Acréscimo do recurso do OUI (organizationally unique identifier) nas configurações do
 DHCP Server para suportar a resolução e pesquisa de Lease do comando: dhcp-lease-list, adicionando as opções para o
 download do arquivo TXT nos scripts: 00-parametros.sh e 02-dhcp.sh. Após análise do BUG: 0014 (Falha de Permissão
 Negada) do arquivo: cron.log, aplicação do Path de Correção no script: 01-openssh.log referente ao usuário e grupo
 do arquivo que está configurado como: root.root, o correto é: syslog.root, adicionado as opções de reinicialização 
-dos serviços dos: Syslog, Cron e Logrotate para a criação correta do arquivo: cron.log.
+dos serviços dos: Syslog, Cron e Logrotate para a criação correta do arquivo: cron.log, caso o arquivo cron.log não
+seja criado de forma correta, digitar o comando: sudo chmod -v syslog.root /var/log/cron.log.
 
 14/03/2022 - Robson Vaamonde - Várias melhoria nas documentações dos scripts em relação aos comandos utilizados nos
 clientes de vários serviços implementados, utilizado a descrição básica do MAN (manuais) dos comandos.
